--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,14 +1,15 @@
 {
   "dependencies": {
-    "com.unity.2d.animation": "2.0.0-preview.1",
-    "com.unity.2d.ik": "1.0.7-preview.1",
-    "com.unity.2d.psdimporter": "1.0.0-preview.1",
+    "com.unity.2d.animation": "2.1.0-preview.4",
+    "com.unity.2d.ik": "1.1.0-preview.1",
+    "com.unity.2d.psdimporter": "1.1.0-preview.3",
     "com.unity.ads": "2.3.1",
     "com.unity.analytics": "3.2.2",
     "com.unity.collab-proxy": "1.2.15",
     "com.unity.package-manager-ui": "2.0.3",
     "com.unity.purchasing": "2.0.3",
     "com.unity.textmeshpro": "1.3.0",
+    "nuget.mono-cecil": "0.1.6-preview",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.assetbundle": "1.0.0",
