--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,11 +4,13 @@
     "com.unity.2d.ik": "1.1.0-preview.1",
     "com.unity.2d.psdimporter": "1.1.0-preview.3",
     "com.unity.ads": "2.3.1",
-    "com.unity.analytics": "3.2.2",
-    "com.unity.collab-proxy": "1.2.15",
-    "com.unity.package-manager-ui": "2.0.3",
-    "com.unity.purchasing": "2.0.3",
-    "com.unity.textmeshpro": "1.3.0",
+    "com.unity.analytics": "3.3.2",
+    "com.unity.collab-proxy": "1.2.16",
+    "com.unity.package-manager-ui": "2.1.2",
+    "com.unity.purchasing": "2.0.6",
+    "com.unity.textmeshpro": "2.0.0",
+    "com.unity.timeline": "1.0.0",
+    "com.unity.xr.legacyinputhelpers": "2.0.2",
     "nuget.mono-cecil": "0.1.6-preview",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
